# ADB_helper

./: CMakeLists.txt  README.md  auto_connect.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
